Basic Bootstrap Website

--- a/contactus.html
+++ b/contactus.html
@@ -16,7 +16,7 @@
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="icons/apple-touch-icon-72x72-precomposed.png">
         <link rel="apple-touch-icon-precomposed" href="icons/apple-touch-icon-57x57-precomposed.png">
 
-        <title>Red Sequence - Cloud app development and consultancy</title>
+        <title>Red Sequence - Contact us</title>
 
         <!-- STYLES -->
         <link rel="stylesheet" media="screen" href="styles/bootstrap.min.css">
@@ -32,46 +32,46 @@
 
             <div class="masthead">
                 <ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="contactus.html">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li class="active"><a href="#">Contact</a></li>
                 </ul>
                 <h3 class="muted">Red Sequence</h3>
             </div>
 
             <hr>
 
-            <div class="jumbotron">
-                <h1>Red Sequence</h1>
-                <p class="lead">
-                    We are a Cloud app development specialists currently developing on our first app; Timestamp. For
-                    further details.
-                </p>
-                <a class="btn btn-large btn-success" href="contactus.html">Contact us</a>
-            </div>
-
-            <hr>
-
             <div class="row-fluid marketing">
                 <div class="span6">
-                    <h4>Timestamp</h4>
-                    <div class="logo-box"><a href="http://www.timestamphq.com"><img src="images/timestamp.png" alt="Timestamp" /></a></div>
-                    <p>Timestamp is our responsively-designed time tracking system developed using HelixJS. Soon to go into beta.</p>
+                    <h4>Contact details</h4>
+                    <table>
+                        <tbody>
+                        <tr>
+                            <td>Email:</td>
+                            <td><a href="mailto:enquires@redsequence.com">enquires@redsequence.com</a></td>
+                        </tr>
+                        <tr>
+                            <td>Phone:</td>
+                            <td>+44 2392 658243</td>
+                        </tr>
+                        <tr>
+                            <td>LinkedIn:
+                            </td>
+                            <td><a href="http://uk.linkedin.com/company/red-sequence">red-sequence</a></td>
+                        </tr>
+                        <tr>
+                            <td>Facebook:</td>
+                            <td><a href="http://facebook.com/redsequence">redsequence</a></td>
+                        </tr>
+                        <tr>
+                            <td>Twitter:</td>
+                            <td><a href="http://facebook.com/redsequence">@redsequence</a></td>
+                        </tr>
+                            </tbody>
+                    </table>
                 </div>
 
                 <div class="span6">
-                    <h4>HelixJS</h4>
-                    <div class="logo-box"><a href="http://www.helixjs.org"><img src="images/helixjs.png" alt="HelixJS" /></a></div>
-                    <p>HelixJS is an open-source JavaScript web app framework that extends Knockout.</p>
-                </div>
-            </div>
-
-            <div class="row-fluid marketing">
-                <div class="span12">
-                    <h4>Consultancy</h4>
-                    <p>
-                        Red Sequence specialise in JavaScript technologies such as Knockout, AngularJS and our own framework HelixJS. Contact us
-                        for more details on how we can help with your project.
-                    </p>
+                    <a href="http://www.helixjs.org"><img src="images/map.png" alt="Map" /></a>
                 </div>
             </div>
 
