Small fixes to CSS and content.

--- a/contactus.html
+++ b/contactus.html
@@ -46,24 +46,23 @@
                     <table>
                         <tbody>
                         <tr>
-                            <td>Email:</td>
+                            <td>Email</td>
                             <td><a href="mailto:enquires@redsequence.com">enquires@redsequence.com</a></td>
                         </tr>
                         <tr>
-                            <td>Phone:</td>
-                            <td>+44 2392 658243</td>
+                            <td>Phone</td>
+                            <td><a href="tel:+442392658243">+44 2392 658243</a></td>
                         </tr>
                         <tr>
-                            <td>LinkedIn:
-                            </td>
+                            <td>LinkedIn</td>
                             <td><a href="http://uk.linkedin.com/company/red-sequence">red-sequence</a></td>
                         </tr>
                         <tr>
-                            <td>Facebook:</td>
+                            <td>Facebook</td>
                             <td><a href="http://facebook.com/redsequence">redsequence</a></td>
                         </tr>
                         <tr>
-                            <td>Twitter:</td>
+                            <td>Twitter</td>
                             <td><a href="http://facebook.com/redsequence">@redsequence</a></td>
                         </tr>
                             </tbody>
@@ -71,7 +70,9 @@
                 </div>
 
                 <div class="span6">
-                    <a href="http://www.helixjs.org"><img src="images/map.png" alt="Map" /></a>
+                    <a href="https://maps.google.co.uk/maps?q=po2+8fa&hl=en&ll=50.811819,-1.086874&spn=0.023185,0.066047&sll=50.812716,-1.060856&sspn=0.011592,0.033023&hnear=PO2+8FA,+United+Kingdom&t=m&z=15&source=gplus-ogsb">
+                        <img src="images/map.png" alt="PO2 8FA" />
+                    </a>
                 </div>
             </div>
 
