--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="jumbotron">
                 <h1>Red Sequence</h1>
                 <p class="lead">
-                    We are a Cloud app development specialists currently developing on our first app; Timestamp. For
+                    We are a Cloud app development specialists currently developing on our first app Timestamp. For
                     further details.
                 </p>
                 <a class="btn btn-large btn-success" href="contactus.html">Contact us</a>
