Added GoSquared tracking code

--- a/contactus.html
+++ b/contactus.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="chrome=1" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Mike Taylor">
-        <meta name="description" content="Red Sequence - Cloud app development and consultancy" />
+        <meta name="description" content="Red Sequence - Cloud productivity apps for individuals and teams" />
         <meta name="msapplication-TileColor" content="#FFF">
         <meta name="msapplication-TileImage" content="icons/apple-touch-icon-144x144-precomposed.png">
 
@@ -45,27 +45,31 @@
                     <h4>Contact details</h4>
                     <table>
                         <tbody>
-                        <tr>
-                            <td>Email</td>
-                            <td><a href="mailto:enquires@redsequence.com">enquires@redsequence.com</a></td>
-                        </tr>
-                        <tr>
-                            <td>Phone</td>
-                            <td><a href="tel:+442392658243">+44 2392 658243</a></td>
-                        </tr>
-                        <tr>
-                            <td>LinkedIn</td>
-                            <td><a href="http://uk.linkedin.com/company/red-sequence">red-sequence</a></td>
-                        </tr>
-                        <tr>
-                            <td>Facebook</td>
-                            <td><a href="http://facebook.com/redsequence">redsequence</a></td>
-                        </tr>
-                        <tr>
-                            <td>Twitter</td>
-                            <td><a href="http://facebook.com/redsequence">@redsequence</a></td>
-                        </tr>
-                            </tbody>
+                            <tr>
+                                <td>Email</td>
+                                <td><a href="mailto:info@redsequence.com">info@redsequence.com</a></td>
+                            </tr>
+                            <tr>
+                                <td>Phone</td>
+                                <td><a href="tel:+442392658243">+44 2392 658243</a></td>
+                            </tr>
+                            <tr>
+                                <td>LinkedIn</td>
+                                <td><a href="http://uk.linkedin.com/company/red-sequence">Red Sequence</a></td>
+                            </tr>
+                            <tr>
+                                <td>Facebook</td>
+                                <td><a href="http://facebook.com/redsequence">redsequence</a></td>
+                            </tr>
+                            <tr>
+                                <td>Twitter</td>
+                                <td><a href="http://twitter.com/redsequence">@redsequence</a></td>
+                            </tr>
+                            <tr>
+                                <td>GitHub</td>
+                                <td><a href="https://github.com/redsequence">redsequence</a></td>
+                            </tr>
+                        </tbody>
                     </table>
                 </div>
 
@@ -84,6 +88,24 @@
 
             <!-- SCRIPTS -->
             <script src="scripts/bootstrap.min.js"></script>
+
+            <script type="text/javascript">
+              var GoSquared = {};
+              GoSquared.acct = "GSN-422629-R";
+              (function(w){
+                function gs(){
+                  w._gstc_lt = +new Date;
+                  var d = document, g = d.createElement("script");
+                  g.type = "text/javascript";
+                  g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";
+                  var s = d.getElementsByTagName("script")[0];
+                  s.parentNode.insertBefore(g, s);
+                }
+                w.addEventListener ?
+                  w.addEventListener("load", gs, false) :
+                  w.attachEvent("onload", gs);
+              })(window);
+            </script>
         </div>
     </body>
 </html>
