--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="chrome=1" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Mike Taylor">
-        <meta name="description" content="Red Sequence - Cloud app development and consultancy" />
+        <meta name="description" content="Red Sequence - Cloud productivity apps for individuals and teams" />
         <meta name="msapplication-TileColor" content="#FFF">
         <meta name="msapplication-TileImage" content="icons/apple-touch-icon-144x144-precomposed.png">
 
@@ -16,7 +16,7 @@
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="icons/apple-touch-icon-72x72-precomposed.png">
         <link rel="apple-touch-icon-precomposed" href="icons/apple-touch-icon-57x57-precomposed.png">
 
-        <title>Red Sequence - Cloud app development and consultancy</title>
+        <title>Red Sequence - Cloud productivity apps for individuals and teams</title>
 
         <!-- STYLES -->
         <link rel="stylesheet" media="screen" href="styles/bootstrap.min.css">
@@ -33,7 +33,7 @@
             <div class="masthead">
                 <ul class="nav nav-pills pull-right">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="contactus.html">Contact</a></li>
+                    <li><a href="contactus.html">Contact us</a></li>
                 </ul>
                 <h3 class="muted">Red Sequence</h3>
             </div>
@@ -43,8 +43,7 @@
             <div class="jumbotron">
                 <h1>Red Sequence</h1>
                 <p class="lead">
-                    We are a Cloud app development specialists currently developing on our first app Timestamp. For
-                    further details.
+                    Cloud productivity apps for individuals and teams. Currently developing our first app Timestamp.
                 </p>
                 <a class="btn btn-large btn-success" href="contactus.html">Contact us</a>
             </div>
@@ -69,8 +68,9 @@
                 <div class="span12">
                     <h4>Consultancy</h4>
                     <p>
-                        Red Sequence specialise in JavaScript technologies such as Knockout, AngularJS and our own framework HelixJS. Contact us
-                        for more details on how we can help with your project.
+                        Red Sequence specialise in JavaScript technologies such as jQuery, Knockout, AngularJS, Node.js and our own framework HelixJS. We also 
+                        specialise in Windows Azure development and hosting. Please <a href="contactus.html">contact us</a> for more details on how we can help 
+                        with your project.
                     </p>
                 </div>
             </div>
@@ -83,6 +83,24 @@
 
             <!-- SCRIPTS -->
             <script src="scripts/bootstrap.min.js"></script>
+
+            <script type="text/javascript">
+              var GoSquared = {};
+              GoSquared.acct = "GSN-422629-R";
+              (function(w){
+                function gs(){
+                  w._gstc_lt = +new Date;
+                  var d = document, g = d.createElement("script");
+                  g.type = "text/javascript";
+                  g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";
+                  var s = d.getElementsByTagName("script")[0];
+                  s.parentNode.insertBefore(g, s);
+                }
+                w.addEventListener ?
+                  w.addEventListener("load", gs, false) :
+                  w.attachEvent("onload", gs);
+              })(window);
+            </script>
         </div>
     </body>
 </html>
