Added logos and fonts

--- a/contactus.html
+++ b/contactus.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" media="screen" href="styles/bootstrap.min.css">
         <link rel="stylesheet" media="screen" href="styles/site.css">
         <link rel="stylesheet" media="screen" href="styles/bootstrap-responsive.min.css">
+        <link rel="stylesheet" media="screen" href="styles/font-awesome.min.css">
 
         <!--[if lt IE 9]>
         <script src="scripts/html5shiv.js"></script>
@@ -32,7 +33,7 @@
 
             <div class="masthead">
                 <ul class="nav nav-pills pull-right">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li class="active"><a href="#">Contact</a></li>
                 </ul>
                 <h3 class="muted">Red Sequence</h3>
@@ -46,31 +47,45 @@
                     <table>
                         <tbody>
                             <tr>
-                                <td>Email</td>
+                                <td class="logo-column"><i class="icon-large icon-envelope-alt"></i></td>
+                                <td class="text-column">Email</td>
                                 <td><a href="mailto:info@redsequence.com">info@redsequence.com</a></td>
                             </tr>
                             <tr>
+                                <td><i class="icon-large icon-phone"></i></td>
                                 <td>Phone</td>
                                 <td><a href="tel:+442392658243">+44 2392 658243</a></td>
                             </tr>
                             <tr>
+                                <td><i class="icon-large icon-linkedin"></i></td>
                                 <td>LinkedIn</td>
-                                <td><a href="http://uk.linkedin.com/company/red-sequence">Red Sequence</a></td>
+                                <td><a href="http://http://www.linkedin.com/company/red-sequence">red-sequence</a></td>
                             </tr>
                             <tr>
+                                <td><i class="icon-large icon-facebook"></i></td>
                                 <td>Facebook</td>
                                 <td><a href="http://facebook.com/redsequence">redsequence</a></td>
                             </tr>
                             <tr>
+                                <td><i class="icon-large icon-twitter"></i></td>
                                 <td>Twitter</td>
                                 <td><a href="http://twitter.com/redsequence">@redsequence</a></td>
                             </tr>
                             <tr>
+                                <td><i class="icon-large icon-github-sign"></i></td>
                                 <td>GitHub</td>
                                 <td><a href="https://github.com/redsequence">redsequence</a></td>
                             </tr>
                         </tbody>
                     </table>
+
+                    <p class="address" itemprop="address" itemscope="" itemtype="http://data-vocabulary.org/Address">
+                        <span class="company-name" itemprop="name">Red Sequence Limited</span>
+                        <span class="street-address" itemprop="street-address">Portsmouth Technopole</span>
+                        <span class="region" itemprop="region">Hampshire</span>
+                        <span class="postal-code" itemprop="postal-code">PO2 8FA</span>
+                        <span class="country-name" itemprop="country-name">United Kingdom</span>
+                    </p>
                 </div>
 
                 <div class="span6">
