--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" media="screen" href="styles/bootstrap.min.css">
         <link rel="stylesheet" media="screen" href="styles/site.css">
         <link rel="stylesheet" media="screen" href="styles/bootstrap-responsive.min.css">
+        <link rel="stylesheet" media="screen" href="styles/font-awesome.min.css">
 
         <!--[if lt IE 9]>
         <script src="scripts/html5shiv.js"></script>
@@ -50,7 +51,7 @@
 
             <hr>
 
-            <div class="row-fluid marketing">
+            <div class="row-fluid">
                 <div class="span6">
                     <h4>Timestamp</h4>
                     <div class="logo-box"><a href="http://www.timestamphq.com"><img src="images/timestamp.png" alt="Timestamp" /></a></div>
@@ -60,18 +61,48 @@
                 <div class="span6">
                     <h4>HelixJS</h4>
                     <div class="logo-box"><a href="http://www.helixjs.org"><img src="images/helixjs.png" alt="HelixJS" /></a></div>
-                    <p>HelixJS is an open-source JavaScript web app framework that extends Knockout.</p>
+                    <p>DNA for web apps. HelixJS is an open-source JavaScript web app framework that extends Knockout and provides a complete foundation for architecting web apps.</p>
                 </div>
             </div>
 
-            <div class="row-fluid marketing">
+            <div class="row-fluid consultancy">
                 <div class="span12">
                     <h4>Consultancy</h4>
                     <p>
                         Red Sequence specialise in JavaScript technologies such as jQuery, Knockout, AngularJS, Node.js and our own framework HelixJS. We also 
-                        specialise in Windows Azure development and hosting. Please <a href="contactus.html">contact us</a> for more details on how we can help 
+                        specialise in .NET and Windows Azure development and hosting. Please <a href="contactus.html">contact us</a> for more details on how we can help 
                         with your project.
                     </p>
+                </div>
+            </div>
+
+            <div class="hero-unit">
+                <div class="row-fluid javascript-logos">
+                    <div class="span3">
+                        <a href="http://jquery.com"><img src="images/jquery.png" alt="jQuery" /></a>
+                    </div>
+
+                    <div class="span3">
+                        <a href="http://knockoutjs.com"><img src="images/knockout.png" alt="jQuery" /></a>
+                    </div>
+
+                    <div class="span3">
+                        <a href="http://angularjs.org"><img src="images/angularjs.png" alt="AngularJS" /></a>
+                    </div>
+
+                    <div class="span3">
+                        <a href="http://nodejs.org"><img src="images/nodejs.png" alt="Node.js" /></a>
+                    </div>
+                </div>
+
+                <div class="row-fluid">
+                    <div class="span3">
+                        <a href="http://www.microsoft.com/net‎"><img src="images/dotnet.png" alt=".NET" /></a>
+                    </div>
+
+                    <div class="span3">
+                        <a href="http://www.windowsazure.com"><img src="images/windowsazure.png" alt="Windows Azure" /></a>
+                    </div>
                 </div>
             </div>
 
