--- a/contactus.html
+++ b/contactus.html
@@ -59,7 +59,7 @@
                             <tr>
                                 <td><i class="icon-large icon-linkedin"></i></td>
                                 <td>LinkedIn</td>
-                                <td><a href="http://http://www.linkedin.com/company/red-sequence">red-sequence</a></td>
+                                <td><a href="http://www.linkedin.com/company/red-sequence">red-sequence</a></td>
                             </tr>
                             <tr>
                                 <td><i class="icon-large icon-facebook"></i></td>
