--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
             <hr>
 
             <div class="jumbotron">
+                <!--<div><img src="images/redsequence.png" alt="Red Sequence" /></div>-->
                 <h1>Red Sequence</h1>
                 <p class="lead">
-                    Cloud productivity apps for individuals and teams. Currently developing our first app Timestamp.
+                    Cloud productivity apps for individuals and teams.
                 </p>
                 <a class="btn btn-large btn-success" href="contactus.html">Contact us</a>
             </div>
@@ -55,7 +56,10 @@
                 <div class="span6">
                     <h4>Timestamp</h4>
                     <div class="logo-box"><a href="http://www.timestamphq.com"><img src="images/timestamp.png" alt="Timestamp" /></a></div>
-                    <p>Timestamp is our responsively-designed time tracking system developed using HelixJS. Soon to go into beta.</p>
+                    <p>
+                        We are currently developing our first app Timestamp. Timestamp is a responsively-designed time tracking system developed using HelixJS. It works equally
+                        on desktops, smartphones and tablets. Beta coming soon.
+                    </p>
                 </div>
 
                 <div class="span6">
@@ -70,7 +74,7 @@
                     <h4>Consultancy</h4>
                     <p>
                         Red Sequence specialise in JavaScript technologies such as jQuery, Knockout, AngularJS, Node.js and our own framework HelixJS. We also 
-                        specialise in .NET and Windows Azure development and hosting. Please <a href="contactus.html">contact us</a> for more details on how we can help 
+                        specialise in .NET and Windows Azure development. Please <a href="contactus.html">contact us</a> for more details on how we can help 
                         with your project.
                     </p>
                 </div>
@@ -109,7 +113,7 @@
             <hr>
 
             <div class="footer">
-                <p>&copy; 2013 Red Sequence Limited.</p>
+                <p>&copy; 2013 Red Sequence Limited. Registered in England. Company number 8550632.</p>
             </div>
 
             <!-- SCRIPTS -->
