Additional logos and content fixes

--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
                     </table>
 
                     <p class="address" itemprop="address" itemscope="" itemtype="http://data-vocabulary.org/Address">
-                        <span class="company-name" itemprop="name">Red Sequence Limited</span>
+                        <span class="company-name" itemprop="name">Red Sequence Ltd.</span>
                         <span class="street-address" itemprop="street-address">Portsmouth Technopole</span>
                         <span class="region" itemprop="region">Hampshire</span>
                         <span class="postal-code" itemprop="postal-code">PO2 8FA</span>
@@ -98,7 +98,7 @@
             <hr>
 
             <div class="footer">
-                <p>&copy; 2013 Red Sequence Limited.</p>
+                <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632.</p>
             </div>
 
             <!-- SCRIPTS -->
