--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="chrome=1" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Mike Taylor">
+        <meta name="author" content="Michael Taylor">
         <meta name="description" content="Red Sequence - Cloud productivity apps for individuals and teams" />
         <meta name="msapplication-TileColor" content="#FFF">
         <meta name="msapplication-TileImage" content="icons/apple-touch-icon-144x144-precomposed.png">
@@ -34,7 +34,7 @@
             <div class="masthead">
                 <ul class="nav nav-pills pull-right">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="contactus.html">Contact us</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <h3 class="muted">Red Sequence</h3>
             </div>
@@ -47,7 +47,7 @@
                 <p class="lead">
                     Cloud productivity apps for individuals and teams.
                 </p>
-                <a class="btn btn-large btn-success" href="contactus.html">Contact us</a>
+                <a class="btn btn-large btn-success" href="contact.html">Contact us</a>
             </div>
 
             <hr>
@@ -73,15 +73,24 @@
                 <div class="span12">
                     <h4>Consultancy</h4>
                     <p>
-                        Red Sequence specialise in JavaScript technologies such as jQuery, Knockout, AngularJS, Node.js and our own framework HelixJS. We also 
-                        specialise in .NET and Windows Azure development. Please <a href="contactus.html">contact us</a> for more details on how we can help 
-                        with your project.
+                        Red Sequence specialise in HTML5 and client-side JavaScript technologies such as jQuery, Backbone, Knockout and AngularJS. We develop our own open source client-side
+                        JavaScript framework called HelixJS, which we use in our apps. On the server-side we specialise in .NET, Node.js and Windows Azure.
+                    </p>
+                    <p>
+                        We are currently committed to developing our first app Timestamp, but if you would like any help or advice on the technologies mentioned then feel free to 
+                        <a href="contact.html">get in touch</a> and we'll try and help!
                     </p>
                 </div>
             </div>
 
             <div class="hero-unit">
                 <div class="row-fluid javascript-logos">
+                    <div class="span3">
+                        <a href="http://www.w3.org/html/logo/">
+                            <img src="http://www.w3.org/html/logo/badge/html5-badge-h-connectivity-css3-performance-semantics-storage.png" width="261" height="64" alt="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Performance &amp; Integration, Semantics, and Offline &amp; Storage" title="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Performance &amp; Integration, Semantics, and Offline &amp; Storage">
+                        </a>
+                    </div>
+
                     <div class="span3">
                         <a href="http://jquery.com"><img src="images/jquery.png" alt="jQuery" /></a>
                     </div>
@@ -93,15 +102,19 @@
                     <div class="span3">
                         <a href="http://angularjs.org"><img src="images/angularjs.png" alt="AngularJS" /></a>
                     </div>
-
-                    <div class="span3">
-                        <a href="http://nodejs.org"><img src="images/nodejs.png" alt="Node.js" /></a>
-                    </div>
                 </div>
 
                 <div class="row-fluid">
                     <div class="span3">
+                        <a href="http://www.helixjg.org"><img src="images/helixjs.png" alt="HelixJS" /></a>
+                    </div>
+
+                    <div class="span3">
                         <a href="http://www.microsoft.com/net‎"><img src="images/dotnet.png" alt=".NET" /></a>
+                    </div>
+
+                    <div class="span3">
+                        <a href="http://nodejs.org"><img src="images/nodejs.png" alt="Node.js" /></a>
                     </div>
 
                     <div class="span3">
@@ -113,7 +126,7 @@
             <hr>
 
             <div class="footer">
-                <p>&copy; 2013 Red Sequence Limited. Registered in England. Company number 8550632.</p>
+                <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632.</p>
             </div>
 
             <!-- SCRIPTS -->
