--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                 </div>
             </div>
 
-            <div class="hero-unit">
-                <div class="row-fluid javascript-logos">
+            <div class="hero-unit javascript-logos">
+                <div class="row-fluid">
                     <div class="span3">
                         <a href="http://www.w3.org/html/logo/">
-                            <img src="http://www.w3.org/html/logo/badge/html5-badge-h-connectivity-css3-performance-semantics-storage.png" width="261" height="64" alt="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Performance &amp; Integration, Semantics, and Offline &amp; Storage" title="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Performance &amp; Integration, Semantics, and Offline &amp; Storage">
+                            <img src="images/html5-badge-h-connectivity-css3-performance-semantics-storage.png" alt="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Performance &amp; Integration, Semantics, and Offline &amp; Storage" title="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Performance &amp; Integration, Semantics, and Offline &amp; Storage">
                         </a>
                     </div>
 
@@ -106,7 +106,7 @@
 
                 <div class="row-fluid">
                     <div class="span3">
-                        <a href="http://www.helixjg.org"><img src="images/helixjs.png" alt="HelixJS" /></a>
+                        <a href="http://www.helixjg.org"><img src="images/helixjs-small.png" alt="HelixJS" /></a>
                     </div>
 
                     <div class="span3">
@@ -130,8 +130,6 @@
             </div>
 
             <!-- SCRIPTS -->
-            <script src="scripts/bootstrap.min.js"></script>
-
             <script type="text/javascript">
               var GoSquared = {};
               GoSquared.acct = "GSN-422629-R";
