--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                     <li><a href="/">Home</a></li>
                     <li class="active"><a href="#">Contact</a></li>
                 </ul>
-                <h3 class="muted">Red Sequence</h3>
+                <img src="images/redsequence.png" alt="Red Sequence" />
             </div>
 
             <hr>
