--- a/index.html
+++ b/index.html
@@ -36,14 +36,12 @@
                     <li class="active"><a href="#">Home</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
-                <h3 class="muted">Red Sequence</h3>
+                <img src="images/redsequence.png" alt="Red Sequence" />
             </div>
 
             <hr>
 
             <div class="jumbotron">
-                <!--<div><img src="images/redsequence.png" alt="Red Sequence" /></div>-->
-                <h1>Red Sequence</h1>
                 <p class="lead">
                     Cloud productivity apps for individuals and teams.
                 </p>
