Updated logo to have border

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             <hr>
 
             <div class="jumbotron">
+                <img src="icons/apple-touch-icon-72x72-precomposed.png" alt="Red Sequence Icon" />
+                <h2>We are Red Sequence</h2>
                 <p class="lead">
                     Cloud productivity apps for individuals and teams.
                 </p>
@@ -72,7 +74,7 @@
                     <h4>Consultancy</h4>
                     <p>
                         Red Sequence specialise in HTML5 and client-side JavaScript technologies such as jQuery, Backbone, Knockout and AngularJS. We develop our own open source client-side
-                        JavaScript framework called HelixJS, which we use in our apps. On the server-side we specialise in .NET, Node.js and Windows Azure.
+                        JavaScript framework called HelixJS, which we use in our apps. On the server-side we specialise in Node.js, .NET and Windows Azure.
                     </p>
                     <p>
                         We are currently committed to developing our first app Timestamp, but if you would like any help or advice on the technologies mentioned then feel free to 
@@ -108,11 +110,11 @@
                     </div>
 
                     <div class="span3">
-                        <a href="http://www.microsoft.com/net‎"><img src="images/dotnet.png" alt=".NET" /></a>
+                        <a href="http://nodejs.org"><img src="images/nodejs.png" alt="Node.js" /></a>
                     </div>
 
                     <div class="span3">
-                        <a href="http://nodejs.org"><img src="images/nodejs.png" alt="Node.js" /></a>
+                        <a href="http://www.microsoft.com/net‎"><img src="images/dotnet.png" alt=".NET" /></a>
                     </div>
 
                     <div class="span3">
