--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
             <hr>
 
             <div class="jumbotron">
-                <img src="icons/apple-touch-icon-72x72-precomposed.png" alt="Red Sequence Icon" />
-                <h2>We are Red Sequence</h2>
+                <img src="images/redsequence-large.png" alt="Red Sequence" />
                 <p class="lead">
                     Cloud productivity apps for individuals and teams.
                 </p>
