Added Google+ link

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="chrome=1" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Mike Taylor">
+        <meta name="author" content="Michael Taylor">
         <meta name="description" content="Red Sequence - Cloud productivity apps for individuals and teams" />
         <meta name="msapplication-TileColor" content="#FFF">
         <meta name="msapplication-TileImage" content="icons/apple-touch-icon-144x144-precomposed.png">
@@ -62,14 +62,19 @@
                                 <td><a href="http://www.linkedin.com/company/red-sequence">red-sequence</a></td>
                             </tr>
                             <tr>
-                                <td><i class="icon-large icon-facebook"></i></td>
-                                <td>Facebook</td>
-                                <td><a href="http://facebook.com/redsequence">redsequence</a></td>
-                            </tr>
-                            <tr>
                                 <td><i class="icon-large icon-twitter"></i></td>
                                 <td>Twitter</td>
                                 <td><a href="http://twitter.com/redsequence">@redsequence</a></td>
+                            </tr>
+                            <tr>
+                                <td><i class="icon-large icon-google-plus"></i></td>
+                                <td>Google+</td>
+                                <td><a href="https://plus.google.com/113094273748984692455" rel="publisher">redsequence</a></td>
+                            </tr>
+                            <tr>
+                                <td><i class="icon-large icon-facebook"></i></td>
+                                <td>Facebook</td>
+                                <td><a href="http://facebook.com/redsequence">redsequence</a></td>
                             </tr>
                             <tr>
                                 <td><i class="icon-large icon-github-sign"></i></td>
