Added Google+ link to homepage

--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
                 <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632.</p>
             </div>
 
+            <div style="visibility: hidden">
+                <a href="https://plus.google.com/113094273748984692455" rel="publisher">Google+</a>
+            </div>
+
             <!-- SCRIPTS -->
             <script type="text/javascript">
               var GoSquared = {};
