Google+ in footer

--- a/index.html
+++ b/index.html
@@ -125,11 +125,7 @@
             <hr>
 
             <div class="footer">
-                <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632.</p>
-            </div>
-
-            <div style="visibility: hidden">
-                <a href="https://plus.google.com/113094273748984692455" rel="publisher">Google+</a>
+                <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632. <a href="https://plus.google.com/113094273748984692455" rel="publisher">Google+</a></p>
             </div>
 
             <!-- SCRIPTS -->
