Removed Timestamp link. Fixed HelixJS link.

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             <div class="row-fluid">
                 <div class="span6">
                     <h4>Timestamp</h4>
-                    <div class="logo-box"><a href="http://www.timestamphq.com"><img src="images/timestamp.png" alt="Timestamp" /></a></div>
+                    <div class="logo-box"><img src="images/timestamp.png" alt="Timestamp" /></div>
                     <p>
-                        We are currently developing our first app Timestamp. Timestamp is a responsively-designed time tracking system developed using HelixJS. It works equally
+                        <strong>Coming late-June.</strong> We are currently developing our first app Timestamp. Timestamp is a responsively-designed time tracking system developed using HelixJS. It works equally
                         on desktops, smartphones and tablets. Beta coming soon.
                     </p>
                 </div>
@@ -105,7 +105,7 @@
 
                 <div class="row-fluid">
                     <div class="span3">
-                        <a href="http://www.helixjg.org"><img src="images/helixjs-small.png" alt="HelixJS" /></a>
+                        <a href="http://www.helixjs.org"><img src="images/helixjs-small.png" alt="HelixJS" /></a>
                     </div>
 
                     <div class="span3">
