Added BizSpark details. Minor text changes.

--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,15 @@
             <hr>
 
             <div class="footer">
-                <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632.</p>
+                <div class="row-fluid">
+                    <div class="span10">
+                        <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632. <a href="https://plus.google.com/113094273748984692455" rel="publisher">Google+</a></p>
+                    </div>
+
+                    <div class="span2">
+                        <a href="http://www.microsoft.com/bizspark/ConnectProfile.aspx?Startup=216891"><img src="images/bizspark-startup.png" alt="Microsoft BizSpark" /></a>
+                    </div>
+                </div>
             </div>
 
             <!-- SCRIPTS -->
