--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <link rel="stylesheet" media="screen" href="styles/bootstrap-responsive.min.css">
         <link rel="stylesheet" media="screen" href="styles/font-awesome.min.css">
 
-        <!--[if lt IE 9]>
-        <script src="scripts/html5shiv.js"></script>
-        <![endif]-->
+                    <!--[if lt IE 9]>
+                    <script src="scripts/html5shiv.js"></script>
+                    <![endif]-->
     </head>
     <body>
         <div class="container-narrow">
@@ -42,11 +42,11 @@
             <hr>
 
             <div class="jumbotron">
-                <img src="images/redsequence-large.png" alt="Red Sequence" />
+                <img src="images/logo-mark.png" alt="Red Sequence" />
                 <p class="lead">
                     Cloud productivity apps for individuals and teams.
                 </p>
-                <a class="btn btn-large btn-success" href="contact.html">Contact us</a>
+                <a class="btn btn-small btn-success" href="contact.html">Contact us</a>
             </div>
 
             <hr>
@@ -56,7 +56,7 @@
                     <h4>Timestamp</h4>
                     <div class="logo-box"><img src="images/timestamp.png" alt="Timestamp" /></div>
                     <p>
-                        <strong>Coming late-June.</strong> We are currently developing our first app Timestamp. Timestamp is a responsively-designed time tracking system developed using HelixJS. It works equally
+                        Red Sequence are currently developing our first app Timestamp. Timestamp is a responsively-designed time tracking system developed using HelixJS. It works equally
                         on desktops, smartphones and tablets. Beta coming soon.
                     </p>
                 </div>
@@ -70,13 +70,22 @@
 
             <div class="row-fluid consultancy">
                 <div class="span12">
+                    <h4>Microsoft BizSpark</h4>
+                    <p>
+                        Red Sequence are members of the Microsoft BizSpark Program. Our profile can be found <a href="http://www.microsoft.com/bizspark/ConnectProfile.aspx?Startup=216891">here</a>.
+                    </p>
+                </div>
+            </div>
+
+            <div class="row-fluid consultancy">
+                <div class="span12">
                     <h4>Consultancy</h4>
                     <p>
                         Red Sequence specialise in HTML5 and client-side JavaScript technologies such as jQuery, Backbone, Knockout and AngularJS. We develop our own open source client-side
                         JavaScript framework called HelixJS, which we use in our apps. On the server-side we specialise in Node.js, .NET and Windows Azure.
                     </p>
                     <p>
-                        We are currently committed to developing our first app Timestamp, but if you would like any help or advice on the technologies mentioned then feel free to 
+                        We are currently committed to developing our first app Timestamp, but if you would like any help or advice on the technologies mentioned then feel free to
                         <a href="contact.html">get in touch</a> and we'll try and help!
                     </p>
                 </div>
@@ -95,7 +104,7 @@
                     </div>
 
                     <div class="span3">
-                        <a href="http://knockoutjs.com"><img src="images/knockout.png" alt="jQuery" /></a>
+                        <a href="http://knockoutjs.com"><img src="images/knockout.png" alt="Knockout" /></a>
                     </div>
 
                     <div class="span3">
@@ -125,26 +134,34 @@
             <hr>
 
             <div class="footer">
-                <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632. <a href="https://plus.google.com/113094273748984692455" rel="publisher">Google+</a></p>
+                <div class="row-fluid">
+                    <div class="span10">
+                        <p>&copy; 2013 Red Sequence Ltd. Registered in England. Company number 8550632. <a href="https://plus.google.com/113094273748984692455" rel="publisher">Google+</a></p>
+                    </div>
+
+                    <div class="span2">
+                        <a href="http://www.microsoft.com/bizspark/ConnectProfile.aspx?Startup=216891"><img src="images/bizspark-startup.png" alt="Microsoft BizSpark" /></a>
+                    </div>
+                </div>
             </div>
 
             <!-- SCRIPTS -->
             <script type="text/javascript">
-              var GoSquared = {};
-              GoSquared.acct = "GSN-422629-R";
-              (function(w){
-                function gs(){
-                  w._gstc_lt = +new Date;
-                  var d = document, g = d.createElement("script");
-                  g.type = "text/javascript";
-                  g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";
-                  var s = d.getElementsByTagName("script")[0];
-                  s.parentNode.insertBefore(g, s);
-                }
-                w.addEventListener ?
-                  w.addEventListener("load", gs, false) :
-                  w.attachEvent("onload", gs);
-              })(window);
+                var GoSquared = {};
+                GoSquared.acct = "GSN-422629-R";
+                (function(w){
+                  function gs(){
+                    w._gstc_lt = +new Date;
+                    var d = document, g = d.createElement("script");
+                    g.type = "text/javascript";
+                    g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";
+                    var s = d.getElementsByTagName("script")[0];
+                    s.parentNode.insertBefore(g, s);
+                  }
+                  w.addEventListener ?
+                    w.addEventListener("load", gs, false) :
+                    w.attachEvent("onload", gs);
+                })(window);
             </script>
         </div>
     </body>
