Updated phone number

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                             <tr>
                                 <td><i class="icon-large icon-phone"></i></td>
                                 <td>Phone</td>
-                                <td><a href="tel:+442392658243">+44 2392 658243</a></td>
+                                <td><a href="tel:+442392984010">02392 984010</a></td>
                             </tr>
                             <tr>
                                 <td><i class="icon-large icon-linkedin"></i></td>
