Added link to TimestampHQ and turned logo blue

--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
             <div class="row-fluid">
                 <div class="span6">
                     <h4>Timestamp</h4>
-                    <div class="logo-box"><img src="images/timestamp.png" alt="Timestamp" /></div>
+                    <div class="logo-box"><a href="http://www.timestamphq.com"><img src="images/timestamp.png" alt="Timestamp" /></a></div>
                     <p>
-                        Red Sequence are currently developing our first app Timestamp. Timestamp is a responsively-designed time tracking system developed using HelixJS. It works equally
-                        on desktops, smartphones and tablets. Beta coming soon.
+                        Time tracking doesn't have to be time consuming. Timestamp has been designed to minimize user effort by providing an elegant and intuitive user centric design and simple zero-click natural language input method. Win back your time.
                     </p>
                 </div>
 
