[Copy] Minor copy changes

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <link rel="stylesheet" media="screen" href="styles/bootstrap-responsive.min.css">
         <link rel="stylesheet" media="screen" href="styles/font-awesome.min.css">
 
-                    <!--[if lt IE 9]>
-                    <script src="scripts/html5shiv.js"></script>
-                    <![endif]-->
+        <!--[if lt IE 9]>
+        <script src="scripts/html5shiv.js"></script>
+        <![endif]-->
     </head>
     <body>
         <div class="container-narrow">
@@ -56,7 +56,7 @@
                     <h4>Timestamp</h4>
                     <div class="logo-box"><a href="http://www.timestamphq.com"><img src="images/timestamp.png" alt="Timestamp" /></a></div>
                     <p>
-                        Time tracking doesn't have to be time consuming. Timestamp has been designed to minimize user effort by providing an elegant and intuitive user centric design and simple zero-click natural language input method. Win back your time.
+                        Time tracking doesn't have to be time consuming. Timestamp is designed to minimize effort by providing an elegant and intuitive user centric design and simple natural language input method. Win back your time.
                     </p>
                 </div>
 
